--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -54,7 +54,7 @@ header, menu {
 }
 
 #wrapper{
-    width: 80%;
+    width: 90%;
     min-width: 350px;
     max-width: 1500px;
     margin-left: auto;
@@ -68,15 +68,15 @@ aside, main, footer{
 }
 
 aside{
-    width:20%;
+    width:25%;
     box-sizing: border-box;
     float: right;
     clear:right;
-    height: 20vw;
+    height: 25vw;
     overflow-y: scroll;
     font-size: 1.3vw;
     border-top: solid gray 1vw;
-    margin-top: 1vw;
+    margin-top: 2vw;
     /* text-align: justify;
     text-justify: inter-word; */
 
@@ -89,7 +89,7 @@ aside img {
 
 
 main{
-    width: 80%;
+    width: 75%;
     float: left;
     box-sizing: border-box;
 }
@@ -144,6 +144,11 @@ footer>span {
     text-align: center;
     display: inline-block;
 }
+
+body {
+    margin-top: 0;
+}
+
 
 @media only screen and (max-width: 800px){
     main {
