--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1,6 +1,6 @@
 header {
-    width: 67%;
-    float: left;
+    /* float: left; */
+    width: 50%;
     text-align: center;
     font-size: 1.5vw;
     position: fixed;
@@ -11,11 +11,11 @@ header h1 {
 }
 
 menu {
-    float: right;
+    /* float: left; */
     margin-top: 0;
-    width: 33%;
+    width: 50%;
     font-size: 1.3vw;
-    margin-left: 66%;
+    margin-left: 50%;
     /* fixed locks the position relative to the window, so scrolling has no effect.
     For some reason this moves the horizontal position all the way to the left??? */
     position: fixed;
