Made videos responsive to sizing. Added browser_search.html and peoplenet.html Added content to browser_search.html

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -87,6 +87,10 @@ aside img {
     width: 80%;
 }
 
+iframe {
+    width: 20vw;
+    height: 11vw;
+}
 
 main{
     width: 75%;
@@ -117,7 +121,7 @@ section {
     padding: .6vw;
     /* text-align: justify;
     text-justify: inter-word; */
-    padding-right: 2vw;
+    padding-right: 1vw;
     float: left;
 }
 
