--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1,6 +1,6 @@
 header {
     /* float: left; */
-    width: 50%;
+    width: 40%;
     text-align: center;
     font-size: 1.5vw;
     position: fixed;
@@ -13,9 +13,9 @@ header h1 {
 menu {
     /* float: left; */
     margin-top: 0;
-    width: 50%;
+    width: 60%;
     font-size: 1.3vw;
-    margin-left: 50%;
+    margin-left: 40%;
     /* fixed locks the position relative to the window, so scrolling has no effect.
     For some reason this moves the horizontal position all the way to the left??? */
     position: fixed;
@@ -39,7 +39,7 @@ header, menu {
     height: 7vw;
     margin-bottom: 0;
     background-color: blue;
-    padding: .2vw;
+    /*padding: .2vw;*/
 }
 
 #heading {
